--- a/clase9/estilos.css
+++ b/clase9/estilos.css
@@ -144,3 +144,8 @@ body {
    .social-icon{
     margin: 20px 10px;
    }
+
+.scale-up-center {
+	-webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) forwards;
+	        animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) forwards;
+}
